--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "convert-string": "^0.1.0",
     "expo": "^38.0.9",
     "galio-framework": "^0.7.1",
     "react": "16.13.1",
-    "react-native": "0.63.2",
+    "react-native": "0.63.4",
+    "react-native-bluetooth-serial-next": "^1.2.3",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-restart": "0.0.22",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.1.0",
     "react-native-svg": "^12.1.0",
-    "react-native-vector-icons": "^7.0.0"
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-wifi-reborn": "^4.3.7",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "7.11.1",
