--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-screens": "^3.1.0",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-version-info": "^1.1.1",
     "react-native-wifi-reborn": "^4.3.7",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
